Fix typo in main heading from 'ourism' to 'oursm'

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="sectionHome">
       <div class="bg-container d-flex flex-column justify-content-end">
         <div class="tourism-card">
-          <h1 class="main-heading">ourism</h1>
+          <h1 class="main-heading">oursm</h1>
           <p class="paragraph">Plan your trip.</p>
           <button class="button" onclick="display('sectionFavouritePlaces')">Get Started</button>
         </div>
